@@ -1,5 +1,11 @@
 2005-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* gnus-art.el (gnus-article-setup-buffer): Kill and re-create the
+	article buffer when editing of the article is discarded.
+	(gnus-article-prepare): Revert.
+
+2005-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>
+
 	* gnus-art.el (gnus-article-prepare): Remove
 	message-strip-forbidden-properties from the local hook.
 
